UIP-456 Fix label spacing per Jeff

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -566,6 +566,7 @@ fieldset {
 	}
 	&.unfocused {
 		padding: 21px;
+		padding-bottom: 0px;
 	}
 	&.conditional-fieldset {
 		margin-left: -21px;
